--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -51,10 +51,11 @@
 
 .owner {
   display: flex;
-  margin: 30px;
-  height: 200px;
+  margin: 70px;
+  height: 60px;
+  background-color: rgb(22, 8, 8);
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .owner > div {
